processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_04_53.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            2,
            3,
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
)
