processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_05_42.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            2,
            3,
            4,
            0,
            0,
            0,
            0,
        ],
    },
)
